apps/base/tinkerbell/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: tinkerbell-image-app
          ports:
            - containerPort: 3100
          resources:
            limits:
              cpu: "2"
              memory: "4Gi"
            requests:
              cpu: "0.1"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 3100
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 3100
            initialDelaySeconds: 10
            periodSeconds: 10
