apps/base/tinkerbell/searxng-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
spec:
  type: ClusterIP
  selector:
    app: searxng
  ports:
    - name: http
      port: 8080
      targetPort: http
